Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37035

Resizing svg icon's gives invalid painter warnings

    XMLWordPrintable

Details

    Description

      Compile and Run the Attach example debug mode.
      Use the splitter to move left and right.

      You would notice errors as,

      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::save: Painter not active
      QPainter::setPen: Painter not active
      QPainter::setBrush: Painter not active
      QPainter::setRenderHint: Painter must be active to set rendering hints
      QPainter::setRenderHint: Painter must be active to set rendering hints
      

      Attachments

        1. resizable_frames.zip
          27 kB
        2. svgpatch.diff
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            tapadar Indrajit Tapadar (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes